# docs/swagger.yaml
@@ -289,6 +289,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: get all transactions
       tags:
       - Transactions
@@ -318,6 +320,8 @@ paths:
           description: Internal Server Error
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: get transaction by id
       tags:
       - Transactions
